--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,3 +25,11 @@ body {
 	margin-bottom: 10px;
 }
 
+#article-date {
+	margin-bottom: 40px;
+}
+
+.article-details-title {
+	font-size:  4em;
+	margin-bottom: 40px;
+}
