Delete an article

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,3 +33,9 @@ body {
 	font-size:  4em;
 	margin-bottom: 40px;
 }
+
+.btn-space {
+	margin-top: 20px;
+	margin-left: 5px;
+	margin-right: 5px;
+}
