--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -7,4 +7,5 @@ article class='detail-article'
 	div class='article-body'
 		= @article.body
 	
-	= link_to "Edit Article", edit_article_path(@article)
+	= link_to "Edit Article", edit_article_path(@article), class: "btn btn-primary btn-lg btn-space"
+	= link_to "Delete Article", article_path(@article), method: :delete,  data: {confirm: "Are you sure you want to delete the article?"}, class: 'btn btn-primary btn-lg btn-space btn-danger'
