--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,34 +7,9 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
-    nav.navbar.navbar-default.navbar-fixed-top[role="navigation"]
-      .container-fluid
-        .navbar-header
-          button.navbar-toggle[type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"]
-            |  <span class"icon-bar">
-            |  <span class"icon-bar">
-            |  <span class"icon-bar">
-          = link_to "Blog App", root_path, class: "navbar-brand"
-        #bs-example-navbar-collapse-1.navbar-collapse.collapse
-          ul.nav.navbar-nav
-            li.active
-              = link_to "Authors", "#"
-            - if user_signed_in?
-              .navbar-right
-                p.navbar-text
-                  | Signed in as #{current_user.email}
-            li
-              = link_to "Sign up", new_user_registration_path
-            li
-              =link_to "Sign in", new_user_session_path
-    .container-fluid
-      - flash.each do |name, msg|
-        |  <div class="alert alert-#{name}">
-        |  <a href="#" class='close' data-dismiss='alert' &#215;>
-        = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
-    .row
-      .col-md-10.col-md-offset-1
-        .col-md-8
-          = yield
-        |  <div class"col-md-4"> 
-        = yield :sidebar
+    = render "layouts/shared/header"
+    = render "layouts/shared/main"
+    = render "layouts/shared/footer"
+    
+
+
