Setup sign out for users

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,9 +7,9 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
-    = render "layouts/shared/header"
-    = render "layouts/shared/main"
-    = render "layouts/shared/footer"
+    = render "shared/header"
+    = render "shared/main"
+    = render "shared/footer"
     
 
 
