--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,3 +67,10 @@ body {
 	color: 					#468847;
 	text-align: left;
 }
+
+
+.author {
+	padding-top: 15px;
+	padding-left: 15px;
+	font-style: italic;
+}
