--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing all Articles
-
-= link_to "New Article", new_article_path, class: "btn btn-default btn-lg", id: "new-article-btn"
+- if user_signed_in?
+	= link_to "New Article", new_article_path, class: "btn btn-default btn-lg", id: "new-article-btn"
 
 - @articles.each do |article|
 	div class='well well-lg'
