--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -6,8 +6,8 @@ article class='detail-article'
 
 	div class='article-body'
 		= @article.body
-	
-	= link_to "Edit Article", edit_article_path(@article), class: "btn btn-primary btn-lg btn-space"
-	= link_to "Delete Article", article_path(@article), method: :delete,  data: {confirm: "Are you sure you want to delete the article?"}, class: 'btn btn-primary btn-lg btn-space btn-danger'
+	- if user_signed_in? && current_user == @article.user
+		= link_to "Edit Article", edit_article_path(@article), class: "btn btn-primary btn-lg btn-space"
+		= link_to "Delete Article", article_path(@article), method: :delete,  data: {confirm: "Are you sure you want to delete the article?"}, class: 'btn btn-primary btn-lg btn-space btn-danger'
 
 	
