--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -9,5 +9,41 @@ article class='detail-article'
 	- if user_signed_in? && current_user == @article.user
 		= link_to "Edit Article", edit_article_path(@article), class: "btn btn-primary btn-lg btn-space"
 		= link_to "Delete Article", article_path(@article), method: :delete,  data: {confirm: "Are you sure you want to delete the article?"}, class: 'btn btn-primary btn-lg btn-space btn-danger'
-
-	
+hr
+.col-md-12
+  = form_for [@article, @comment ], :html => {class: "form-horizontal", role: "form"} do |f|
+    - if @comment.errors.any?
+      .panel.panel-danger.col-md-offset-1
+        .panel-heading
+          h2.panel-title
+            = pluralize(@comment.errors.count, "error")
+            |  prohibited this article from being saved: 
+          .panel-body
+            ul
+              - @comment.errors.full_messages.each do |msg|
+                li
+                  = msg
+    .form-group
+      .control-label.col-md-2
+        = f.label :body, 'New Comment'
+      .col-md-10
+        = f.text_area :body, rows: 10, class: 'form-control', placeholder: 'Your comment'
+    .form-group
+      .col-md-offset-2.col-md-10
+        = f.submit "Add Comment", class: 'btn btn-primary btn-lg pull-right'
+.col-md-12
+  header
+    h2
+      | Comments
+  .col-md-10
+    - if @article.comments.any?
+      - @article.comments.persisted.each do |comment|
+        .comment-body
+          = comment.body
+        .comment-time
+          = time_ago_in_words(comment.created_at)
+          |  ago by 
+          = comment.user.email
+        hr
+    - else
+      |  There are no comments to show.
